added profil photo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <img class="menu-icon" src="/images/icon_menu_light_white.png" alt="menu icon">
                 </div>
             </nav>
-            <img class="img-profil" src="/images/pc-profil.jpg" alt="Angélique Wons">
+            <img class="img-profil" src="/images/photo-profil.png" alt="Angélique Wons">
             <p id="name" class="name text-lightgrey text-center text-uppercase">Angélique Wons</p>
             <p class="profil-text text-lightgrey text-center">Développeuse JS/React en formation <br>
             En recherche de stage</p>
@@ -48,7 +48,7 @@
             <h1>A propos</h1>
             <hr>
             <div class="little-space-container-section flex-column align-items-center">
-                <p class="text-center">En formation <strong>Développeur web</strong> à la Wild Code School de Biarritz - parcours Javascript/React/Node.js
+                <p class="p-about-layout">En formation <strong>Développeur web</strong> à la Wild Code School de Biarritz - parcours Javascript/React/Node.js
                     <ul>
                         <li>Apprendre à apprendre</li>
                         <li>La pratique au premier plan</li>
@@ -66,7 +66,7 @@
                 Stage de 4 mois<br>
                 février - juin 2019</p>
                 <img class="briefcaseIcon" src="/images/briefcase.png" alt="logo malette">
-                <p class="p-about">"J'aspire à mettre en oeuvre des solutions informatiques. La dimension analytique et le challenge rencontré face à un problème, la manipulation de variables voire la possibilité d'étudier leur valeur prédictive, le machine learning, représentent pour moi une source de motivation professionnelle.</br>
+                <p class="p-about-layout p-about-italic">"J'aspire à mettre en oeuvre des solutions informatiques. La dimension analytique et le challenge rencontré face à un problème, la manipulation de variables voire la possibilité d'étudier leur valeur prédictive, le machine learning, représentent pour moi une source de motivation professionnelle.</br>
                 Je suis aujourd'hui à la recherche d'un stage me permettant dans un premier temps d'asseoir mes compétences. Désireuse d'évoluer et d'apprendre, je ne suis pas fermée quant aux langages à manipuler."</p>
             </div>
         </section>
