--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </nav>
             <img class="img-profil" src="/images/photo-profil.png" alt="Angélique Wons">
             <p id="name" class="name text-lightgrey text-center text-uppercase">Angélique Wons</p>
-            <p class="profil-text text-lightgrey text-center">Développeuse JS/React en formation <br>
+            <p class="profil-text text-lightgrey text-center">Développeuse JS/React/Node en formation <br>
             En recherche de stage</p>
             <a href="#contact" class="btn my-btn-lightgrey margin-end-section">Me contacter</a>
         </header>
