--- a/en/index.html
+++ b/en/index.html
@@ -38,6 +38,7 @@
                     <img class="menu-icon" src="/images/icon_menu_light_white.png" alt="menu icon">
                 </div>
             </nav>
+            <a href="../index.html"><img class="flag" src="../images/flag/fr-flag.png" alt="français"/></a>
             <img class="img-profil" src="/images/photo-profil.png" alt="Angélique Wons">
             <p id="name" class="name text-lightgrey text-center text-uppercase">Angélique Wons</p>
             <p class="profil-text text-lightgrey text-center">Développeuse JS/React/Node en formation <br>
