--- a/en/index.html
+++ b/en/index.html
@@ -67,7 +67,7 @@
                 février - juin 2019</p>
                 <img class="briefcaseIcon" src="/images/briefcase.png" alt="logo malette">
                 <p class="p-about-layout p-about-italic">"J'aspire à mettre en oeuvre des solutions informatiques. La dimension analytique et le challenge rencontré face à un problème, la manipulation de variables voire la possibilité d'étudier leur valeur prédictive, le machine learning, représentent pour moi une source de motivation professionnelle.</br>
-                Je suis aujourd'hui à la recherche d'un stage me permettant dans un premier temps d'asseoir mes compétences. Désireuse d'évoluer et d'apprendre, je ne suis pas fermée quant aux langages à manipuler."</p>
+                Je suis aujourd'hui à la recherche d'un stage me permettant dans un premier temps d'asseoir mes compétences. Désireuse d'évoluer et d'apprendre, je suis ouverte quant aux différents langages à manipuler."</p>
             </div>
         </section>
         <section id="resume" class="margin-end-section flex-column justify-content-center align-items-center">
