modified size of profil photo, modified text in about section and portfolio section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
         <meta name="author" content="Angélique Wons">
-        <meta name="description" content="Angélique Wons, développeuse junior JS/React : travaux, projets, portfolio, compétences, technologies employées">
+        <meta name="description" content="Angélique Wons, développeuse web junior : mes travaux, projets, portfolio, compétences, technologies employées">
 
         <!-- Style Sheet CSS -->
         <link href="https://fonts.googleapis.com/css?family=Bitter&display=swap" rel="stylesheet"> 
@@ -38,10 +38,10 @@
                     <img class="menu-icon" src="/images/icon_menu_light_white.png" alt="menu icon">
                 </div>
             </nav>
-            <img class="img-profil" src="/images/photo-profil.png" alt="Angélique Wons">
+            <img class="img-profil" src="/images/photo-profil-elipse.jpg" alt="Angélique Wons">
             <p id="name" class="name text-lightgrey text-center text-uppercase">Angélique Wons</p>
-            <p class="profil-text text-lightgrey text-center">Développeuse JS/React/Node en formation <br>
-            En recherche de stage</p>
+            <p class="profil-text text-lightgrey text-center">Développeuse web junior <br>
+            En stage chez Prospec-Immo</p>
             <a href="#contact" class="btn my-btn-lightgrey margin-end-section">Me contacter</a>
         </header>
         <section id="about" class="margin-end-section">
@@ -62,12 +62,12 @@
                 <img class="logoWildCodeSchool" src="/images/logo-wcs.png" alt="Logo Wild Code School">
                 <br>
                 <a class="btn my-btn-cuivre" href="https://www.wildcodeschool.com/fr-FR/campus/biarritz" target="_blank">En savoir plus sur la formation</a>
-                <p class="text-center">Actuellement en recherche de stage<br>
-                Stage de 4 mois<br>
+                <p class="text-center">Actuellement en stage chez Prospec-Immo<br>
+                Application desktop destinée aux professionnels de l'immobilier<br>
                 février - juin 2019</p>
                 <img class="briefcaseIcon" src="/images/briefcase.png" alt="logo malette">
-                <p class="p-about-layout p-about-italic">"J'aspire à mettre en oeuvre des solutions informatiques. La dimension analytique et le challenge rencontré face à un problème, la manipulation de variables voire la possibilité d'étudier leur valeur prédictive, le machine learning, représentent pour moi une source de motivation professionnelle.</br>
-                Je suis aujourd'hui à la recherche d'un stage me permettant dans un premier temps d'asseoir mes compétences. Désireuse d'évoluer et d'apprendre, je suis ouverte quant aux différents langages à manipuler."</p>
+                <p class="p-about-layout p-about-italic">"J'aspire à mettre en oeuvre des solutions informatiques. La dimension analytique et le challenge rencontré face à un problème, la manipulation de variables et l'étude de leur valeur prédictive représentent pour moi une source de motivation professionnelle.</br>
+                Je suis désireuse d'évoluer et d'apprendre de nouvelles technologies qui me permettront de tendre au Machine Learning."</p>
             </div>
         </section>
         <section id="resume" class="margin-end-section flex-column justify-content-center align-items-center">
